fixed overflow home page

--- a/teachUZB_app/static/teachUZB_app/css/style.css
+++ b/teachUZB_app/static/teachUZB_app/css/style.css
@@ -50,7 +50,7 @@
 
 /* Отображение горизонтального скроллбара только при ховере (прокрутка) */
 body {
-  overflow-x: hidden;
+  overflow-x: hidden!important;
 }
 
 /* Стиль горизонтального скроллбара */
